--- a/17-01-12/demo03.html
+++ b/17-01-12/demo03.html
@@ -26,7 +26,7 @@
       }
     });
 
-    console.log($obj); // {name : 'amnhh', ....} 就变过来了。。
+    console.log($obj); // {name: "amnhh", publish: 2017, edition: 3} => 变了 name, 删除了 author
   </script>
 </body>
 </html>
